Fixed grid-gap so it looks nicer

--- a/src/style.css
+++ b/src/style.css
@@ -51,7 +51,7 @@ section {
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding: 100px 60px;
-  grid-gap: 20px;
+  grid-gap: 45px;
   max-width: 1200px;
   margin: 0 auto;
 }
